python3-cyberfusion-queue-support (3.1) UNRELEASED; urgency=medium

  * Add database indexes

 -- William Edwards <wedwards@cyberfusion.nl>  Fri, 26 Sep 2025 18:26:00 +0000

python3-cyberfusion-queue-support (3.0.3) unstable; urgency=medium

  * Fix purge cron log path

 -- William Edwards <wedwards@cyberfusion.nl>  Fri, 26 Sep 2025 18:26:00 +0000

python3-cyberfusion-queue-support (3.0.2) unstable; urgency=medium

  * Add missing cronscript install

 -- William Edwards <wedwards@cyberfusion.nl>  Thu, 25 Sep 2025 18:17:00 +0000

python3-cyberfusion-queue-support (3.0.1) unstable; urgency=medium

  * Bump SystemdSupport dependency

 -- William Edwards <wedwards@cyberfusion.nl>  Wed, 24 Sep 2025 22:01:00 +0000

python3-cyberfusion-queue-support (3.0) unstable; urgency=medium

  * Add `fail_silently` to queue items
  * Add status to queue processes
  * Let `Queue.process` return queue process
  * RmTreeItem: add min_depth
  * RmTreeItem: require absolute path
  * Purge queues

 -- William Edwards <wedwards@cyberfusion.nl>  Thu, 28 Aug 2025 16:56:00 +0000

python3-cyberfusion-queue-support (2.7.1) unstable; urgency=medium

  * DatabaseUserEnsureStateItem: make `password` attribute private

 -- Mika Scheer <wedwards@cyberfusion.nl>  Tue, 26 Aug 2025 13:25:00 +0000

python3-cyberfusion-queue-support (2.7) unstable; urgency=medium

  * Add JSON encoding for all queue items and outcomes

 -- William Edwards <wedwards@cyberfusion.nl>  Mon, 25 Aug 2025 11:57:00 +0000

python3-cyberfusion-queue-support (2.6.4) unstable; urgency=medium

  * Database: add reverse relationships

 -- William Edwards <wedwards@cyberfusion.nl>  Sun, 20 Jul 2025 18:09:00 +0000

python3-cyberfusion-queue-support (2.6.3) unstable; urgency=medium

  * Set multiple items to deduplicated
  * Fix static `created_at`
  * Commit queue items and outcomes once

 -- William Edwards <wedwards@cyberfusion.nl>  Sun, 06 Jul 2025 01:15:00 +0000

python3-cyberfusion-queue-support (2.6.2) unstable; urgency=medium
